# nds-rs

./: Cargo.toml  LICENSE.MD  README.md
nds-rs/: Cargo.toml
nds-rs/src/: lib.rs  runtime.rs
nds-sys/: Cargo.toml  build.rs  wrapper.h
nds-sys/src/: allocator.rs  lib.rs  macros.rs  nds.rs
