[package]
name = "nds-rs"
version = "0.1.0"
authors = ["Kamefrede <kamefrede@gmail.com>"]
edition = "2018"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]
name = "nds"


[dependencies.nds-sys]
path = "../nds-sys"
